# chain

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.wallet.md  MIGRATION.md  Makefile  NOTICE.md  README-linux.md  README-macos.md  README-windows.md  README.docker.md  README.md  RELEASE.md  RELEASES.md  RELEASE_NOTES.md  SECURITY.md  build.rs  cliff.toml  docker-compose.yml  nightly_status.md  phaseC_status.md  rust-toolchain.toml
fuzz/: .gitignore  Cargo.toml
fuzz/.cargo/: config.toml
fuzz/corpus/config_loader/: default.toml
fuzz/corpus/network_messages/: full.json
fuzz/corpus/pruning_proof/: genesis.json  with_previous.json
fuzz/corpus/transaction_parser/: basic.json
fuzz/dictionaries/: config_loader.dict  network_messages.dict  pruning_proof.dict  transaction_parser.dict
fuzz/fuzz_targets/: config_loader.rs  network_messages.rs  pruning_proof.rs  transaction_parser.rs
prover/fuzz/: Cargo.toml
prover/fuzz/fuzz_targets/: stwo_circuit_loader.rs
prover/plonky3_backend/: Cargo.toml  README.md
prover/plonky3_backend/src/: config.rs  gpu.rs  lib.rs  public_inputs.rs  typed_keys.rs
prover/plonky3_backend/src/circuits/: consensus.rs  mod.rs
prover/plonky3_backend/tests/: consensus.rs  keys.rs
rpp/chain/: Cargo.toml  build.rs
rpp/chain-cli/: Cargo.toml  SDK.md
rpp/chain-cli/src/: lib.rs  rate_limit.rs  snapshot_errors.rs
rpp/chain/src/: gossip.rs  lib.rs  stwo_stub.rs
rpp/chain/tests/: property_consensus_round.rs  property_queue_weights.rs
rpp/consensus/: Cargo.toml  README.md  node.rs
rpp/consensus/src/: bft_loop.rs  evidence.rs  governance.rs  leader.rs  lib.rs  messages.rs  proofs.rs  reputation.rs  rewards.rs  state.rs  tests.rs  validator.rs
rpp/consensus/tests/: consensus_proof_roundtrip.rs  property_vrf.rs
rpp/crypto-vrf/: Cargo.toml
rpp/crypto-vrf/src/: lib.rs  telemetry.rs
rpp/identity-tree/: Cargo.toml
rpp/identity-tree/src/: constants.rs  lib.rs
rpp/node/: Cargo.toml  Dockerfile  README.docker.md  README.md
rpp/node-runtime-api/: Cargo.toml
rpp/node-runtime-api/src/: lib.rs
rpp/node/src/: cli.rs  config.rs  feature_guard.rs  lib.rs  main.rs
rpp/node/tests/: feature_matrix.rs  prover_nightly_smoke.rs  regression.rs  runtime_modes.rs  smoke.rs  snapshot_cli.rs  snapshot_verify.rs  validator_tooling.rs
rpp/p2p/: Cargo.toml
rpp/p2p/fuzz/: Cargo.toml
rpp/p2p/macros/: Cargo.toml
rpp/p2p/src/: admission.rs  discovery.rs  gossip.rs  handshake.rs  identity.rs  lib.rs  metrics.rs  peerstore.rs  persistence.rs  pipeline.rs  policy_log.rs  policy_signing.rs  protocol.rs  roadmap.rs  security.rs  simulator.rs  swarm.rs  tier.rs  topics.rs  transport.rs  worm_export.rs
rpp/p2p/tests/: access_control.rs  empty_behaviour.rs  fuzz_regressions.rs  gossip_ingestion.rs  gossip_state_rehydration.rs  meta_channel.rs  meta_evidence.rs  multi_node_quorum.rs  proof_cache_metrics.rs  snapshot_stream.rs  state_sync_roundtrip.rs  vendor_stack.rs  vrf_gossip.rs  witness_qos.rs  worm_export.rs
rpp/pruning/: Cargo.toml
rpp/pruning/src/: lib.rs
rpp/sim/: Cargo.toml
rpp/sim/src/: harness.rs  lib.rs  main.rs  multiprocess.rs  node_adapter.rs  scenario.rs
rpp/sim/tests/: sim_smoke.rs
rpp/wallet/: Cargo.toml  README.md  wallet_messages.toml
rpp/wallet-integration-tests/: Cargo.toml
rpp/wallet-integration-tests/src/: lib.rs
rpp/wallet-integration-tests/tests/: vendor_electrs_index.rs  wallet_pruning_snapshot.rs  wallet_workflow_snapshot.rs
rpp/wallet-interface/: Cargo.toml  README.md
rpp/wallet-interface/src/: lib.rs  node_client.rs  rpc.rs  runtime_config.rs  runtime_telemetry.rs  runtime_wallet.rs  telemetry.rs  workflows.rs
rpp/wallet-runner/: Cargo.toml
rpp/wallet-runner/src/: main.rs
rpp/wallet/blueprint/: mod.rs
rpp/wallet/docs/: runtime_api_inventory.md
rpp/wallet/fuzz/: Cargo.toml
rpp/wallet/src/: config.rs  lib.rs  messages.rs  multisig_stub.rs  node_client.rs  runtime.rs  stwo_stub.rs  tests.rs  zsi_stub.rs
rpp/wallet/tests/: vendor_electrs_cache.rs  vendor_electrs_index.rs  vendor_electrs_init.rs  vendor_electrs_mempool.rs  vendor_electrs_p2p.rs  vendor_electrs_signals.rs  vendor_electrs_tracker_scenario.rs  wallet_electrs_api.rs  wallet_rescan_control.rs  wallet_sync_resume.rs  wallet_workflow_snapshot.rs
rpp/wallet/ui/: mod.rs  proofs.rs  wallet.rs  workflows.rs
rpp/zk/backend-interface/: Cargo.toml
rpp/zk/prover_mock_backend/: Cargo.toml
rpp/zk/prover_stwo_backend/: Cargo.toml  README.md
storage-firewood/: Cargo.toml
storage-firewood/src/: api.rs  column_family.rs  kv.rs  lib.rs  lifecycle.rs  pruning.rs  schema.rs  state.rs  tree.rs  wal.rs
storage-firewood/src/pruning/: tests_prop.rs
tools/simnet/: Cargo.toml  Dockerfile  README.docker.md  README.md
tools/simnet/scenarios/: canary_rolling_restart.ron  ci_block_pipeline.ron  ci_state_sync_guard.ron  compound_partitioned_backpressure.ron  consensus_chaos.ron  consensus_epoch_drift.ron  consensus_quorum_stress.ron  consensus_reorg_rpp_stark.ron  consensus_reorg_stark.ron  consensus_slashing_backends.ron  consensus_verifier_pause_resume.ron  gossip_backpressure.ron  leader_rotation_prover_load.ron  mixed_backend_interop.ron  multinode_soak.ron  partitioned_flood.ron  prover_acceleration_mix.ron  ring_latency_profile.ron  small_world_smoke.ron  snapshot_partition.ron  snapshot_rebuild.ron  uptime_soak.ron  validator_set_rotation.ron  wallet_rpc_failover.ron
tools/simnet/src/: config.rs  consensus.rs  main.rs  process.rs  profiles.rs  runner.rs
tools/simnet/tests/: cli_smoke.rs  cli_validation.rs  seed_determinism.rs
tools/snapshot-verify/: Cargo.toml
tools/snapshot-verify/src/: lib.rs  main.rs
tools/worm-export-stub/: Cargo.toml
tools/worm-export-stub/src/: main.rs
tools/zsi-fixtures/: Cargo.toml
tools/zsi-fixtures/src/: main.rs
triehash/: Cargo.toml
triehash/benches/: triehash.rs
xtask/: Cargo.toml  Dockerfile  README.docker.md
xtask/src/: cli_smoke.rs  fuzz_debug.rs  main.rs  release.rs  telemetry.rs  wallet_bundle.rs  wallet_firmware.rs  wallet_installers.rs
(+1366 files in other folders)
