[package]
name = "rpp-chain"
version = "0.1.0"
edition = "2024"

[features]
default = ["backend-stwo"]
backend-stwo = ["dep:stwo"]
backend-plonky3 = []

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = { version = "1.0", features = ["serde"] }
hex = "0.4"
malachite = { version = "0.6.1", features = ["enable_serde", "serde"] }
rpp-consensus = { path = "rpp/consensus" }
rpp-p2p = { path = "rpp/p2p" }
parking_lot = "0.12"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage-firewood = { path = "storage-firewood" }
stwo = { path = "rpp/zk/stwo", optional = true }
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
blake2 = "0.10"
blake3 = "1.5"

[dev-dependencies]
tempfile = "3.10"
hex-literal = "0.4"
