[workspace]
members = [
  "benchmark",
  "ffi",
  "firewood-macros",
  "firewood",
  "fwdctl",
  "storage",
  "storage-firewood",
  "triehash",
  "rpp/p2p",
]
resolver = "2"

[workspace.features]
vendor_electrs = []

[workspace.package]
version = "0.0.12"
edition = "2024"
license-file = "LICENSE.md"
homepage = "https://avalabs.org"
repository = "https://github.com/ava-labs/firewood"
readme = "README.md"
rust-version = "1.89.0"

[profile.release]
debug = true

[profile.maxperf]
panic = "abort"
codegen-units = 1
lto = "fat"
debug = false
inherits = "release"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
indexing_slicing = "warn"
explicit_deref_methods = "warn"
missing_const_for_fn = "warn"
arithmetic_side_effects = "warn"
undocumented_unsafe_blocks = "deny"
# lower the priority of pedantic to allow overriding the lints it includes
pedantic = { level = "warn", priority = -1 }
# These lints are from pedantic but allowed. They are a bit too pedantic and
# encourage making backwards incompatible changes.
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
# Ignore interger casts. This is to avoid unnecessary `try_into` calls for usize
# to u64 and vice versa and should be re-enabled if/when clippy has a separate
# lint for usize vs non-usize truncation.
cast_possible_truncation = "allow"

[workspace.dependencies]
# workspace local packages
firewood = { path = "firewood", version = "0.0.12" }
firewood-macros = { path = "firewood-macros", version = "0.0.12" }
firewood-storage = { path = "storage", version = "0.0.12" }
firewood-ffi = { path = "ffi", version = "0.0.12" }
firewood-triehash = { path = "triehash", version = "0.0.12" }

# common dependencies
aquamarine = "0.6.0"
bytemuck = "1.23.1"
bytemuck_derive = "1.10.0"
clap = { version = "4.5.41", features = ["derive"] }
coarsetime = "0.1.36"
fastrace = "0.7.14"
hex = "0.4.3"
integer-encoding = "4.0.2"
log = "0.4.27"
metrics = "0.24.2"
metrics-util = "0.20.0"
nonzero_ext = "0.3.0"
rand_distr = "0.5.1"
sha2 = "0.10.9"
smallvec = "1.15.1"
test-case = "3.3.1"
thiserror = "2.0.12"

# common dev dependencies
criterion = "0.7.0"
ethereum-types = "0.15.1"
hex-literal = "1.0.0"
pprof = "0.15.0"
rand = "0.9.2"
tempfile = "3.20.0"

# vendored libp2p dependencies
asynchronous-codec = "0.7.0"
env_logger = "0.11.8"
futures = "0.3.30"
futures-bounded = "0.2.4"
futures-rustls = { version = "0.26.0", default-features = false }
getrandom = "0.2"
hashlink = "0.10.0"
hickory-proto = { version = "0.25.2", default-features = false }
hickory-resolver = { version = "0.25.2", default-features = false }
if-watch = "3.2.1"
libp2p = { version = "0.56.0", path = "vendor/libp2p/libp2p" }
libp2p-allow-block-list = { version = "0.6.0", path = "vendor/libp2p/misc/allow-block-list" }
libp2p-connection-limits = { version = "0.6.0", path = "vendor/libp2p/misc/connection-limits" }
libp2p-core = { version = "0.43.1", path = "vendor/libp2p/core" }
libp2p-gossipsub = { version = "0.50.0", path = "vendor/libp2p/protocols/gossipsub" }
libp2p-identify = { version = "0.47.0", path = "vendor/libp2p/protocols/identify" }
libp2p-identity = { version = "0.2.12", path = "vendor/libp2p/identity" }
libp2p-memory-connection-limits = { version = "0.5.0", path = "vendor/libp2p/misc/memory-connection-limits" }
libp2p-noise = { version = "0.46.1", path = "vendor/libp2p/transports/noise" }
libp2p-plaintext = { version = "0.43.0", path = "vendor/libp2p/transports/plaintext" }
libp2p-quic = { version = "0.13.0", path = "vendor/libp2p/transports/quic" }
libp2p-peer-store = { version = "0.1.0", path = "vendor/libp2p/misc/peer-store" }
libp2p-ping = { version = "0.47.0", path = "rpp/p2p/vendor/protocols/ping" }
libp2p-request-response = { version = "0.29.0", path = "vendor/libp2p/protocols/request-response" }
libp2p-swarm = { version = "0.47.0", path = "vendor/libp2p/swarm" }
libp2p-swarm-derive = { version = "=0.35.1", path = "vendor/libp2p/swarm-derive" }
libp2p-tcp = { version = "0.44.0", path = "vendor/libp2p/transports/tcp" }
libp2p-tls = { version = "0.6.2", path = "vendor/libp2p/transports/tls" }
libp2p-mplex = { version = "0.43.1", path = "vendor/libp2p/muxers/mplex" }
libp2p-muxer-test-harness = { version = "0.1.0", path = "vendor/libp2p/muxers/test-harness" }
libp2p-webrtc-utils = { version = "0.4.0", path = "vendor/libp2p/misc/webrtc-utils" }
libp2p-yamux = { version = "0.47.0", path = "vendor/libp2p/muxers/yamux" }
multiaddr = "0.18.1"
multihash = "0.19.1"
multistream-select = { version = "0.13.0", path = "vendor/libp2p/misc/multistream-select" }
prometheus-client = "0.23"
quick-protobuf-codec = { version = "0.3.1", path = "vendor/libp2p/misc/quick-protobuf-codec" }
quickcheck = { package = "quickcheck-ext", path = "vendor/libp2p/misc/quickcheck-ext" }
rcgen = "0.13"
ring = "0.17.12"
rw-stream-sink = { version = "0.4.0", path = "vendor/libp2p/misc/rw-stream-sink" }
tokio = { version = "1.38", default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
unsigned-varint = "0.8.0"
web-time = "1.1.0"


[patch.crates-io]
libp2p-identity = { path = "vendor/libp2p/identity" }

