[package]
name = "storage-firewood"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
bincode = { version = "1.3", default-features = false }
blake3 = "1.5"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
rpp-pruning = { path = "../rpp/pruning" }
metrics = { workspace = true }

[dev-dependencies]
proptest = "1.5"
