[package]
name = "firewood-triehash"
version.workspace = true
authors = ["Parity Technologies <admin@parity.io>", "Ron Kuris <swcafe@gmail.com>"]
description = "In-memory patricia trie operations"
repository.workspace = true
license = "MIT OR Apache-2.0"
edition.workspace = true
rust-version = "1.79"

[dependencies]
# Regular dependencies
hash-db = "=0.16.0"
rlp = "=0.6.1"

[dev-dependencies]
# Workspace dependencies
criterion.workspace = true
ethereum-types.workspace = true
hex-literal.workspace = true
# Regular dependencies
keccak-hasher = "=0.16.0"
tiny-keccak = { version = "=2.0.2", features = ["keccak"] }
trie-standardmap = "=0.16.0"

[[bench]]
name = "triehash"
path = "benches/triehash.rs"
harness = false

[lints]
workspace = true
