[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "=0.22.1"
blake3 = "=1.8.2"
flate2 = { version = "=1.0.34", default-features = false, features = ["rust_backend"] }
reqwest = { version = "=0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "=1.0.225", features = ["derive"] }
serde_json = { workspace = true }
tempfile = "=3.23.0"
time = { version = "=0.3.36", features = ["formatting", "macros", "parsing"] }
