[package]
name = "plonky3-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
blake3 = "=1.8.2"
serde = { version = "=1.0.225", features = ["derive"] }
serde_json = { version = "=1.0.145", default-features = false, features = ["std"] }
thiserror = "=1.0.69"
p3-air = "=0.3.0"
p3-baby-bear = "=0.3.0"
p3-challenger = "=0.3.0"
p3-commit = "=0.3.0"
p3-field = "=0.3.0"
p3-matrix = "=0.3.0"
p3-mds = "=0.3.0"
p3-mersenne-31 = "=0.3.0"
p3-poseidon = "=0.3.0"
p3-util = "=0.3.0"
