[package]
name = "rpp-consensus"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[features]
default = []
prover-stwo = ["prover-backend-interface/prover-stwo"]
prover-stwo-simd = ["prover-stwo", "prover-backend-interface/prover-stwo-simd"]
prover-mock = ["prover-backend-interface/prover-mock"]

[dependencies]
serde = { version = "=1.0.225", features = ["derive"] }
serde_json = "=1.0.145"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
blake3 = "=1.8.2"
libp2p = { version = "=0.54.1", default-features = false }
prover-backend-interface = { path = "../zk/backend-interface" }
rustversion = "1.0"
