[package]
name = "rpp-consensus"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[features]
default = ["prover-stwo"]
prover-stwo = [
    "prover-backend-interface/prover-stwo",
    "dep:prover_stwo_backend",
    "prover_stwo_backend/prover-stwo",
]
prover-stwo-simd = [
    "prover-stwo",
    "prover-backend-interface/prover-stwo-simd",
    "prover_stwo_backend/simd",
]
prover-mock = ["prover-backend-interface/prover-mock"]

[dependencies]
serde = { version = "=1.0.225", features = ["derive"] }
serde_json = "=1.0.145"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
blake3 = "=1.8.2"
libp2p = { path = "../../vendor/libp2p/libp2p", default-features = false }
prover-backend-interface = { path = "../zk/backend-interface" }
prover_stwo_backend = { path = "../zk/prover_stwo_backend", default-features = false, optional = true }

[workspace]

[patch.crates-io]
libp2p-identity = { path = "../../vendor/libp2p/identity" }
