[package]
name = "rpp-consensus"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[features]
default = ["prover-mock"]
nightly-prover = [
    "dep:prover_stwo_backend",
    "prover_stwo_backend/prover-stwo",
    "rpp-crypto-vrf/nightly-prover",
]
prover-stwo = [
    "nightly-prover",
    "prover-backend-interface/prover-stwo",
]
prover-stwo-simd = [
    "prover-stwo",
    "nightly-prover",
    "prover-backend-interface/prover-stwo-simd",
    "prover_stwo_backend/simd",
]
prover-mock = [
    "prover-backend-interface/prover-mock",
    "dep:prover_mock_backend",
]

[dependencies]
serde = { version = "=1.0.225", features = ["derive"] }
serde_json = "=1.0.145"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
blake3 = "=1.8.2"
ed25519-dalek = "=2.1.1"
base64 = "=0.21.7"
libp2p = { path = "../../vendor/libp2p/libp2p", default-features = false }
base64 = "=0.21.7"
ed25519-dalek = "=2.1.1"
prover-backend-interface = { path = "../zk/backend-interface" }
prover_stwo_backend = { workspace = true, optional = true }
rpp-crypto-vrf = { path = "../crypto-vrf" }
prover_mock_backend = { path = "../zk/prover_mock_backend", optional = true }
tracing = { version = "=0.1.41", default-features = false, features = ["std"] }
hex = "=0.4.3"
rpp-p2p = { path = "../p2p" }
rpp-pruning = { path = "../pruning" }
metrics = { workspace = true }

[dev-dependencies]
proptest = "1.4"

