[package]
name = "rpp-crypto-vrf"
version = "0.0.12"
edition = "2024"
license = "MIT"

[dependencies]
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
schnorrkel = "0.11.5"
malachite = { path = "../../vendor/malachite/0.4.18/src" }
prover-backend-interface = { path = "../zk/backend-interface" }
prover_stwo_backend = { path = "../zk/prover_stwo_backend", default-features = false, features = ["official"] }
