[package]
name = "rpp-crypto-vrf"
version = "0.0.13"
edition.workspace = true
rust-version = "1.79"
license = "MIT"

[features]
default = []
nightly-prover = ["dep:prover_stwo_backend"]

[dependencies]
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
schnorrkel = "0.11.5"
malachite = { path = "../../vendor/malachite/0.4.18/src" }
prover-backend-interface = { path = "../zk/backend-interface" }
prover_stwo_backend = { path = "../../prover/prover_stwo_backend", default-features = false, features = ["official"], optional = true }
sha2 = { workspace = true }
opentelemetry = { version = "=0.30.0", features = ["metrics"] }
tracing.workspace = true
