[package]
name = "rpp-identity-tree"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
blake2 = "0.10"
hex = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true }
