[package]
name = "rpp-node-runtime-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Shared runtime configuration types for the RPP node entrypoints"
readme.workspace = true

authors = ["Ava Labs"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
rpp-wallet-interface = { path = "../wallet-interface" }
