[package]
name = "rpp-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
description = "Executable entrypoint for running an RPP node"
repository = "https://github.com/ava-labs/chain"

[features]
default = ["dev"]
dev = ["prover-mock"]
prod = []
nightly-prover = ["rpp-chain/nightly-prover"]
prover-stwo = ["nightly-prover", "rpp-chain/prover-stwo"]
stwo = ["prover-stwo"]
prover-stwo-simd = [
    "prover-stwo",
    "nightly-prover",
    "rpp-chain/prover-stwo-simd",
]
prover-mock = ["rpp-chain/prover-mock"]

[dependencies]
anyhow = "1.0"
base64 = "=0.21.7"
blake2 = "=0.10.6"
blake3 = "=1.8.2"
bincode = "=1.3.3"
clap = { version = "4.5", features = ["derive"] }
hex.workspace = true
parking_lot = "0.12"
thiserror.workspace = true
tokio = { version = "1.37", features = ["macros", "rt", "rt-multi-thread", "signal", "time", "process", "io-util", "sync"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter", "fmt"] }
opentelemetry = { version = "=0.30.0", features = ["trace", "metrics", "internal-logs"] }
opentelemetry-otlp = { version = "=0.30.0", features = ["grpc-tonic", "reqwest-client"] }
opentelemetry_sdk = "=0.30.0"
tracing-opentelemetry = "=0.23.0"
tonic = { version = "0.11", default-features = false, features = ["transport"] }
rpp-chain = { path = "../chain", default-features = false }
rpp-pruning = { path = "../pruning" }
rpp-p2p = { path = "../p2p", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
sha2 = "0.10"
time = "0.3"
storage = { package = "firewood-storage", path = "../../storage" }
storage-firewood = { path = "../../storage-firewood" }

[dev-dependencies]
assert_cmd = "2.0.17"
libc = "0.2"
tempfile = "3.10"

[[bin]]
name = "node"
path = "../bin/node.rs"

[[bin]]
name = "wallet"
path = "../bin/wallet.rs"

[[bin]]
name = "hybrid"
path = "../bin/hybrid.rs"

[[bin]]
name = "validator"
path = "../bin/validator.rs"
