[package]
name = "rpp-p2p"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"

[features]
default = ["identify", "ping", "gossipsub", "request-response"]

identify = ["dep:libp2p-identify", "libp2p/identify"]
ping = ["dep:libp2p-ping", "libp2p/ping"]
gossipsub = ["dep:libp2p-gossipsub", "libp2p/gossipsub"]
request-response = ["dep:libp2p-request-response", "libp2p/request-response"]

[dependencies]
base64 = "=0.21.7"
async-trait = "0.1"
futures = "0.3"
hex = "=0.4.3"
libp2p = { path = "../../vendor/libp2p/libp2p", features = ["macros", "noise", "tcp", "tokio", "yamux"] }
libp2p-identify = { path = "vendor/protocols/identify", optional = true }
libp2p-ping = { path = "vendor/protocols/ping", optional = true }
libp2p-gossipsub = { path = "vendor/protocols/gossipsub", optional = true }
libp2p-request-response = { path = "vendor/protocols/request-response", optional = true }
parking_lot = "0.12"
serde = { version = "=1.0.225", features = ["derive"] }
serde_json = "=1.0.145"
thiserror = "=2.0.12"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
tracing = "=0.1.41"
blake3 = "=1.8.2"
blake2 = "=0.10.6"
rand = { version = "=0.8.5", features = ["std"] }
schnorrkel = "0.11"

[patch.crates-io]
libp2p-identity = { path = "../../vendor/libp2p/identity" }

[dev-dependencies]
tempfile = "3.10"
proptest = "1.4"
